# AgentDropOne

./: .gitignore  README.md  SKILL.md  install.ps1  install.sh  pyproject.toml
agentsync/: __init__.py  chat_export.py  cli.py  docs.py  orchestrator.py  registry.py  secrets.py  skill_sync.py
docs/: index.html
lib/: nanobot-README.md
lib/nanobot/agent/: loop.py
lib/nanobot/agent/tools/: shell.py
lib/nanobot/channels/: websocket.py
lib/nanobot/config/: schema.py
lib/nanobot/providers/: openai_compat_provider.py
onesync-skills/full-migrate/: agentdropone-setup.py  setup.py
onesync-skills/sync-daemon/: README.md  sync.py
